# Trabalho-Final-Prog-4

./: README.md  pyproject.toml
Analisador_doc/: index.html  package.json
Analisador_doc/src/: App.tsx
Analisador_doc/src/components/: AlertDialog.tsx  InputWButton.tsx
Analisador_doc/src/components/sideNavigation/: navItem.tsx  navigation.tsx
Analisador_doc/src/components/sidebar/: Profile.tsx  Sidebar.tsx
Analisador_doc/src/components/ui/: alert-dialog.tsx
Analisador_doc/src/contexts/: FilesContext.tsx
Analisador_doc/src/pages/UploadComponentsPage/: ComponentAnalyzerDropZone.tsx
Backend/: .env  .env.example  db.js  package-lock.json  package.json  pnpm-lock.yaml  server.js
Banco/: login_database_schema.sql
Frontend/: index.html  package-lock.json  package.json  pacotes_instalados.txt  pnpm-lock.yaml  server.ts  tailwind.config.js
Frontend/src/: main.tsx  testes.tsx
Frontend/src/components/: AlertDialog.tsx  Header.tsx  Input.tsx
Frontend/src/components/Menu/: MenuBarAnalyzer.tsx  MenuBarAnalyzerItem.tsx
Frontend/src/components/sideNavigation/: navItem.tsx
Frontend/src/components/sidebar/: Profile.tsx  Sidebar.tsx  SpaceFooter.tsx
Frontend/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx
Frontend/src/contexts/: FilesContext.tsx
Frontend/src/pages/UploadComponentsPage/: AnalyzerDropzone.tsx
Frontend/src/pages/login/: Login.tsx
Frontend/src/routes/: routes.tsx
Frontend/src/utils/: pdfTools.ts
automacao/: Dockerfile  app.py
automacao/templates/: index.html
ocr/: Dockerfile  ocr_service.py  requirements.txt
(+3 files in other folders)
